# distributions

./: .gitignore  API_PROGRESS.md  CMakeLists.txt  DEVELOPMENT.md  IMPLEMENT_PROGRESS.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZE_PROGRESS.md  README.md  SIMD_PROGRESS.md  V070_PROGRESS.md  V080_PROGRESS.md  VALIDATION_PROGRESS.md  future_work.md  plan-api.md  plan-post-v1.md  plan-simd.md  plan-v0.7.0.md  plan-v0.8.0.md  plan-validation.md  plan.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
.vault/: requirements.txt
.vault/.obsidian/: app.json  core-plugins.json
.vault/00-Home/: How to read this vault.md  Index.md
.vault/01-Concepts/: Conjugate priors.md  PMF, PDF, and CDF.md  Parameters and moments.md  Probability distribution.md  Sampling vs density.md  Special cases and limits.md  Support and domain.md
.vault/02-Families/: circular.md  compound-poisson.md  elliptical.md  exponential.md  location-scale.md  maximum-entropy-probability.md  mixture.md  natural-exponential.md  pearson.md  tweedie.md  wrapped.md
.vault/03-Distributions/continuous/bounded-interval/: _MOC.md  arcsine.md  argus.md  baldingnichols.md  bates.md  beta-rectangular.md  beta.md  continuous-bernoulli.md  continuous-binomial.md  generalized-beta.md  irwinhall.md  kumaraswamy.md  logit-normal.md  noncentral-beta.md  pert.md  raised-cosine.md  reciprocal.md  triangular.md  u-quadratic.md  uniform.md  wigner-semicircle.md
.vault/03-Distributions/continuous/semi-infinite-interval/: _MOC.md  benini.md  benktander-1st-kind.md  benktander-2nd-kind.md  beta-prime.md  burr.md  chi-squared.md  (+52 more)
.vault/04-Code/: Code bridge.md  Implementation index.md
.vault/_meta/: Template_Probability_distributions.md  registry.yaml  taxonomy.json
.vault/templates/: Distribution.md
.vault/tools/: README.md  build_vault.py  vault_charts.py  vault_common.py  vault_content.py  vault_generate.py  vault_index.py  vault_parse.py  vault_scipy.py
archive/ispc-phase1/: README.md  kernels.ispc
bench/: aggregate_summary.py  bench_codegen.py  bench_core.py  compare_baseline.py  dispatch.hpp  harness.hpp  rank_codegen_tiers.py  run_bench.cpp  sample_dump.cpp  sweep.py  verify.py
cmake/: cxx26-gcc14.cmake
cydist/: __init__.py  __init__.pyi  cydist.pxd  cydist.pyx  cydist_shim.cpp  cydist_shim.h  cydist_shim_span.hpp
examples/: README.md
examples/cpp/: basic.cpp  c_api.c
examples/cython/: demo.pyx  run_demo.py  setup_demo.py
examples/python/: basic.py  matplotlib_demo.py  pandas_demo.py  polars_demo.py
include/distributions/: README.md  all.hpp  base.hpp  concepts.hpp  rng.hpp
include/distributions/degenerate/: cantor.hpp  dirac_delta_function.hpp
include/distributions/detail/: bounded.hpp  chi_squared.hpp  circular.hpp  counter_rng.hpp  discrete.hpp  f_distribution.hpp  gamma.hpp  hypergeometric.hpp  inverse_gaussian.hpp  math.hpp  matrix.hpp  multivariate.hpp  multivariate_discrete.hpp  normal.hpp  poisson.hpp  real_line.hpp  semi_infinite.hpp  special.hpp  student_t.hpp  uniform.hpp  validate.hpp  variable_support.hpp
include/distributions/directional/: bingham.hpp  bivariate_von_mises.hpp  circular_uniform.hpp  kent.hpp  univariate_von_mises.hpp  von_misesfisher.hpp  wrapped_asymmetric_laplace.hpp  wrapped_cauchy.hpp  wrapped_exponential.hpp  wrapped_levy.hpp  wrapped_normal.hpp
include/distributions/mixed/: rectified_gaussian.hpp
ispc/: pcg.ispc
results/: .gitignore  README.md  summary.csv
results/baseline-v0.2.0/: README.md  bernoulli.csv  beta-binomial.csv  binomial.csv  categorical.csv  discrete-uniform.csv  exponential.csv  geometric.csv  negative-binomial.csv  normal.csv  poisson-binomial.csv  skellam.csv  zipf.csv  zipfmandelbrot.csv
results/baseline-v0.3.0/: README.md  bernoulli.csv  beta-binomial.csv  binomial.csv  categorical.csv  discrete-uniform.csv  exponential.csv  geometric.csv  negative-binomial.csv  normal.csv  poisson-binomial.csv  skellam.csv  zipf.csv  zipfmandelbrot.csv
results/baseline-v0.6.0/: README.md  gamma.csv  poisson.csv  student-t.csv  uniform.csv
results/baseline-v0.7.0/: README.md  beta-tier-b.csv  continuous-bernoulli-tier-b.csv  discrete-weibull-tier-a.csv  discrete-weibull-tier-b.csv  erlang-tier-b.csv  gamma-tier-b.csv  log-normal-tier-b.csv
results/baseline-v0.8.0-batch1/: README.md  continuous-bernoulli.csv  discrete-weibull.csv
results/baseline-v0.8.0-wave3/: README.md  beta-prime.csv  chi-squared.csv  chi.csv  davis.csv  half-normal.csv  inverse-gamma.csv  pareto.csv  rayleigh.csv  scaled-inverse-chi-squared.csv  student-t.csv  weibull.csv
results/baseline-v0.8.0-wave3-shipped/: README.md  beta-prime.csv  half-normal.csv  inverse-gamma.csv
results/baseline-v1.0.0/: README.md
results/baseline-v1.0.0/tier-a/: beta-prime.csv  beta.csv  continuous-bernoulli.csv  erlang.csv  half-normal.csv  log-normal.csv
results/baseline-v1.0.0/tier-b/: beta-prime.csv  beta.csv  continuous-bernoulli.csv  discrete-weibull.csv  erlang.csv  gamma.csv  half-normal.csv  inverse-gamma.csv  log-normal.csv
results/codegen-tier-a/: README.md
results/current/: README.md
scripts/: agent_api_checklist.md  agent_batch_checklist.md  agent_optimize_checklist.md  agent_simd_checklist.md  agent_v070_checklist.md  agent_v080_checklist.md  agent_validation_checklist.md  resume_codegen_sweep.sh
tests/: scipy_reference.py  statistical_compare.py  test_batch_fast_codegen.py  test_codegen_template.py  test_cydist_f32.py  test_cydist_validation.py  test_generated.py  test_rank_codegen_tiers.py  test_reproducibility.py  test_reproducibility_float.py  test_reproducibility_simd.py  test_statistical.py  test_typed_integration.py  test_validation_codegen.py
tests/cpp/: bernoulli_test.cpp  concepts_test.cpp  counter_rng_test.cpp  cydist_shim_span_test.cpp  param_validate_smoke_test.cpp  simd_avx512_config_test.cpp  simd_config_test.cpp  simd_tier_repro_test.cpp  simd_uniform_test.cpp  smoke_all_test.cpp
tools/: README.md  codegen_distributions.py
tools/codegen/: __init__.py  batch_fast.py  constants.py  emit.py  main.py  models.py  recipes.py  utils.py  validation.py
(+344 files in other folders)
