[build-system]
requires = ["setuptools>=68", "numpy>=1.26", "Cython>=3.0", "picobuild"]
build-backend = "setuptools.build_meta"

[project]
name = "cydist"
version = "0.1.0"
description = "Fast C++/Python probability distribution samplers"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["scipy", "pytest", "PyYAML"]
examples = ["matplotlib>=3.8", "pandas>=2.0", "polars>=0.20"]

[tool.pytest.ini_options]
markers = [
    "sanity: statistical checks vs scipy (slow)",
]
addopts = "-m 'not sanity'"
